--- a/estadisticas-avanzadas.html
+++ b/estadisticas-avanzadas.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Estadísticas Avanzadas - Estado e Instituciones</title>
   <link rel="stylesheet" href="index.css">
-   <script src="script.js"></script>
+   <script src="index.js"></script>
 </head>
 <body>
 <header>
