--- a/denuncias.html
+++ b/denuncias.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Sistema de Denuncias - Estado e Instituciones</title>
   <link rel="stylesheet" href="index.css">
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </head>
 <body>
 <header>
