--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Portal informativo sobre Estado e Instituciones">
   <title>Estado e Instituciones - Inicio</title>
   <link rel="stylesheet" href="index.css">
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </head>
 
 <header>
